# chat-app

./: .env  Cargo.toml  README.md  justfile  schema.excalidraw
chat-client/: Cargo.toml
chat-client/src/: cli.rs  main.rs  types.rs
chat-client/src/network/: mod.rs  recieve.rs  send.rs
chat-core/: Cargo.toml  build.rs
chat-core/schema/: schema.capnp  schema.proto
chat-core/src/: error.rs  lib.rs  prelude.rs
chat-core/src/crypto/: _crypto.rs  mod.rs  types.rs
chat-core/src/event/: capnp.rs  event_builder.rs  mod.rs  protobuf.rs  types.rs
chat-macros/: Cargo.toml
chat-macros/src/: get.rs  lib.rs  new.rs
chat-server/: Cargo.toml  init.sql
chat-server/src/: authentication.rs  handle_connection.rs  main.rs  types.rs
