[package]
name = "chat-client"
version = "0.1.0"
edition = "2021"

[dependencies]
chat-core = { path = "../chat-core" }

# System
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "net"] }
tokio-util = "0.7"
tokio-stream = "0.1"
flume = "0.11"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Tools
# parking_lot = "0.12"
bytes = "1.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dotenvy = "0.15"
color-eyre = "0.6"
