[package]
name = "chat-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chat-macros = { path = "../chat-macros" }

# System
futures = "0.3"
tokio = { version = "1", features = ["rt", "net"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"

# Cryptography
curve25519-dalek = "4.1"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
# ed25519-dalek = "2.0"
argon2 = { version = "0.5", features = ["std"] }
aead = { version = "0.5", features = ["std"] }
chacha20poly1305 = "0.10"
blake3 = "1.5"
rand_core = { version = "0.6", features = ["getrandom"] }

# Logging
thiserror = "1.0"

# Tools
once_cell = "1.19"
bytes = "1.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
base64 = "0.21"

# Serialization
prost = "0.12"
capnp = "0.18"

[build-dependencies]
prost-build = "0.12"
capnpc = "0.18"

[dev-dependencies]
rand = "0.8"
