[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

[dependencies]
chat-core = { path = "../chat-core" }

# System
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "net"] }
tokio-util = "0.7"
tokio-stream = "0.1"
sqlx = { version = "0.7", features = ["runtime-tokio", "macros", "postgres"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Tools
bytes = "1.5"
dotenvy = "0.15"
color-eyre = "0.6"
